// Copyright (c) 2025 AccelByte Inc. All Rights Reserved.
// This is licensed software from AccelByte Inc, for limitations
// and restrictions contact your company contract manager.

syntax = "proto3";

package accelbyte.generic.task_scheduler.v1;

// --- options ---
option csharp_namespace = "AccelByte.Generic.TaskScheduler";
option go_package = "accelbyte.net/generic/taskscheduler";
option java_multiple_files = true;
option java_package = "net.accelbyte.generic.taskscheduler";

enum MessageType {
  TASK_START = 0;
  HEART_BEAT = 1;
}

message ExecutionContext {
  MessageType message_type = 1;
  string cron_expression = 2;
}

message Response {
}

service TaskSchedulerService {
  rpc OnJobTriggered(stream ExecutionContext) returns (stream Response);
}